--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,7 @@
 	--bg-color: white;
 	--bg-blend-color: #f0f0f0;
 	--nav-text-color: black;
+	--ease-text-color: #30313b;
 }
 
 @font-face {
@@ -14,6 +15,18 @@
 @font-face {
 	font-family: buttershine;
 	src: url('../assets/fonts/buttershine.otf') format("opentype");
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .nav {
@@ -41,6 +54,7 @@
 }
 
 .register {
+	font-family: D-DIN;
 	color: var(--powerful-accent-color);
 	border: 1px solid var(--powerful-accent-color);
 	border-radius: 0px;
@@ -79,4 +93,68 @@
 .hover-underline-animation:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.main-container {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	height: 80vh;
+}
+
+.cta {
+	font-family: buttershine;
+	font-size: 15vh;
+	line-height: 1.2;
+	margin: auto;
+	padding-bottom: 10vh;
+}
+
+.cta-side {
+	font-size: 10vh;
+	color: var(--ease-text-color);
+}
+
+.cta-main {
+	font-size: 15vh;
+	background: linear-gradient(-45deg, #9d66d0, #66aed0, #f7d19c, #ebab51);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+
+	background-clip: text;
+	-webkit-background-clip: text;
+    -moz-background-clip: text;
+	color: transparent;
+
+	font-weight: bold;
+	letter-spacing: 2px;
+}
+
+.background-gradient {
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	
+	
+}
+
+#gradient-1 {
+	background: linear-gradient(135deg, rgba(255,255,255,1) 50%,rgba(255,255,255,0) 100%);
+	z-index: -1;
+}
+
+#gradient-2 {
+	opacity: 50%;
+	background: linear-gradient(-45deg, #9d66d0, #66aed0, #f7d19c, #ebab51);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	z-index: -2;
+}
+
+body {
+	margin: 0;
+	padding: 0;
 }
