--- a/styles/index.css
+++ b/styles/index.css
@@ -148,6 +148,7 @@
 .cta-side {
 	font-size: 10vh;
 	color: var(--ease-text-color);
+	text-shadow: 5px 5px 10px #b8b8b8;
 }
 
 .cta-main {
@@ -181,7 +182,7 @@
 }
 
 #gradient-2 {
-	opacity: 75%;
+	opacity: 50%;
 	background: radial-gradient(circle, #9d66d0, #66aed0, #f7d19c, #ebab51);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
@@ -208,4 +209,13 @@ body {
 	font-size: 1.5vw;
 	transition-duration: .3s;
 	cursor: pointer;
+}
+
+.hook {
+	position: absolute;
+	top: 0;
+	left: 50%;
+
+	transform: translate(30%, 30%) scale(1.3);
+	z-index: -3;
 }
