--- a/styles/index2.css
+++ b/styles/index2.css
@@ -196,10 +196,6 @@
 	border-bottom: 1px solid #e6e6e6;
 }
 
-.spec-header {
-
-}
-
 .spec-wrapper {
 	margin-top: 2vh;
 	display: grid;
@@ -220,6 +216,106 @@
 
 .spec-description {
 	padding-left: 6px;
+}
+
+
+#programs {
+	margin-top: 5vh;
+	border-radius: 30px;
+	/*border: 1px solid #e6e6e6;*/
+}
+
+.programs-title {
+	font-family: inter-semibold;
+	text-align: center;
+	font-size: 300%;
+	color: #222222;
+	padding: 2vw;
+	margin-left: 15vw;
+	margin-right: 15vw;
+	/*border-bottom: 1px solid #e6e6e6;*/
+}
+
+.panels {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin-left: 5vw;
+	margin-right: 5vw;
+}
+
+.panel {
+	display: grid;
+	grid-template-rows: 1fr 2fr;
+	border: 1px solid #e6e6e6;
+	margin: 30px;
+	border-radius: 20px;
+	height: 80vh;
+	box-shadow: 0px 5px 25px 8px rgba(0, 0, 0, 0.2);
+	transition-duration: .3s;
+}
+
+.panel:hover {
+	transform: perspective(1500px) rotateY(var(--y-angle)) rotateX(var(--x-angle));
+}
+
+.panel-info {
+	padding: 15px;
+	border-top: 1px solid #e6e6e6;
+	position: relative;
+}
+
+.panel-title {
+	font-family: inter-semibold;
+	font-size: 120%;
+}
+
+.panel-tags {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.panel-tag {
+	padding: 5px;
+	margin: 5px;
+	margin-left: 0;
+	font-family: monospace;
+	background-color: lime;
+	border-radius: 5px;
+}
+
+.green { background-color: #60db85; }
+.blue { background-color: #6580c9; }
+.purple { background-color: #957cd9; }
+.orange { background-color: #f0c769; }
+.red { background-color: #f07769; }
+
+.panel-register {
+	position: absolute;
+	bottom: 15px;
+	font-family: inter;
+	background-color: var(--nav-reg-color);
+	color: white;
+	padding: 10px 20px 10px 20px;
+	border-radius: 10px;
+	margin: 0;
+	transition-duration: .3s;
+	margin-top: 3vh;
+	text-align: center;
+	width: 70px;
+	font-size: 100%;
+	cursor: pointer;
+	stick: bottom;
+}
+
+.panel-description {
+	margin-top: 5px;
+}
+
+.panel-image {
+	max-width: 100%;
+	height: 100%;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
 }
 
 
