cleaned up file structure

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,24 @@
 :root {
-	--powerful-accent-color: orange;
-	--accent-color: #f3b562;
-	--bg-color: white;
-	--bg-blend-color: #f0f0f0;
-	--nav-text-color: black;
-	--ease-text-color: #30313b;
-	--side-margins: 8vw;
+	--minor-color: #6E6E6E;
+}
+
+.main-content {
+	margin: 3vw;
 }
 
 @keyframes gradient {
+	0% {
+		background-position: 30% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 30% 50%;
+	}
+}
+
+@keyframes gradient-2 {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -21,65 +31,24 @@
 }
 
 
-@keyframes skew {
-	0% {
-		transform: skew(0deg, 0deg);
-	}
-	47% {
-		transform: skew(5deg, 5deg);
-	}
-	50% {
-		transform: skew(45deg, 45deg);	}
-	53% {
-		transform: skew(5deg, 5deg);
-	}
-	100% {
-		transform: skew(0deg, 0deg);
-	}
-}
-
-
-.register {
-	font-family: D-DIN;
-	color: var(--powerful-accent-color);
-	border: 1px solid var(--powerful-accent-color);
-	border-radius: 0px;
-	padding: 10px;
-}
-
-.register:hover {
-	color: var(--bg-color);
-	background-color: var(--accent-color);
-	border: 1px solid var(--accent-color);
-}
-
-
-.main-container {
-	display: table-cell;
-	vertical-align: middle;
-
-	height: 100vh;
-	
-}
-
 .cta {
-	display: inline-block;
-	font-family: buttershine;
-	font-size: 15vh;
-	line-height: 1.2;
-	margin-left: var(--side-margins);
-	margin-right: var(--side-margins);
+	text-align: center;
+	font-family: inter-semibold;
+	color: #222222;
 }
 
-.cta-side {
-	font-size: 10vh;
-	color: var(--ease-text-color);
-	text-shadow: 5px 5px 10px #b8b8b8;
+.cta-minor {
+	font-size: 700%;
 }
 
-.cta-main {
-	font-size: 15vh;
-	background: radial-gradient(circle, #9d66d0, #66aed0, #f7d19c, #ebab51);
+.cta-major {
+	font-size: 700%;
+	/*color: #9f75e7;*/
+	color: #222222;
+}
+
+.gradient {
+	background: linear-gradient(-45deg, #9d66d0, #66aed0, #f7d19c, #ebab51);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 
@@ -87,61 +56,266 @@
 	-webkit-background-clip: text;
     -moz-background-clip: text;
 	color: transparent;
-
-	font-weight: bold;
-	letter-spacing: 2px;
 }
 
-.background-gradient {
-	width: 100vw;
-	height: 100vh;
+.cta-about {
+	font-family: inter;
+	font-size: 150%;
+	padding-left: 20vw;
+	padding-right: 20vw;
+	margin-top: 3vh;
+}
+
+.cta-register {
+	font-family: inter;
+	background-color: var(--nav-reg-color);
+	color: white;
+	padding: 15px 25px 15px 25px;
+	border-radius: 100px;
 	margin: 0;
-	padding: 0;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-#gradient-1 {
-	background: linear-gradient(135deg, rgba(255,255,255,1) 50%,rgba(255,255,255,0) 100%);
-	z-index: -1;
-}
-
-#gradient-2 {
-	opacity: 50%;
-	background: radial-gradient(circle, #9d66d0, #66aed0, #f7d19c, #ebab51);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	z-index: -2;
-}
-
-body {
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
-
-#flip-word {
-	display: inline-block;
-}
-
-.cta-button-container {
-	margin-top: 10px;
-	margin-left: var(--side-margins);
-	margin-right: var(--side-margins);
-}
-
-.cta-button {
-	font-size: 1.5vw;
 	transition-duration: .3s;
+	margin: auto;
+	margin-top: 3vh;
+	width: 80px;
+	font-size: 120%;
 	cursor: pointer;
 }
 
-.hook {
+.cta-register:hover {
+	width: 90px;
+}
+
+
+@keyframes text-scroll-By {
+	0% {
+		opacity: 0;
+	}
+	2% {
+		opacity: 1;
+		transform: translateY(100%);
+	}
+	50% {
+		opacity: 1;
+		transform: translateY(100%);
+	}
+	51% {
+		opacity: 0;
+		transform: translateY(50%);
+	}
+	52% {
+		opacity: 0;
+		transform: translateY(0);
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@keyframes text-scroll-For {
+	0% {
+		opacity: 1;
+	}
+	1% {
+		opacity: 0;
+		transform: translateY(50%);
+	}
+	2% {
+		opacity: 0;
+		transform: translateY(100%);
+	}
+	50% {
+		opacity: 0;
+		transform: translateY(100%);
+	}
+	52% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+#scroll {
+	overflow: hidden;
+	position: relative;
+	left: 0;
+	top:0;
+	color: transparent;
+}
+
+#scroll::before {
+	content: 'For';
 	position: absolute;
 	top: 0;
-	left: 50%;
+	left: 0;
+	color: #222;
 
-	transform: translate(30%, 30%) scale(1.3);
-	z-index: -3;
+	background: linear-gradient(-45deg, #9d66d0, #66aed0, #f7d19c, #ebab51);
+	background-size: 400% 400%;
+
+	background-clip: text;
+	-webkit-background-clip: text;
+    -moz-background-clip: text;
+	color: transparent;
+
+
+	animation: text-scroll-For 10s linear infinite, gradient-2 15s ease infinite;
+
 }
+
+#scroll::after {
+	content: 'By';
+	opacity: 0;
+	position: absolute;
+	top: -100%;
+	left: 10%;
+	color: #222;
+
+	background: linear-gradient(-45deg, #9d66d0, #66aed0, #f7d19c, #ebab51);
+	background-size: 400% 400%;
+
+	background-clip: text;
+	-webkit-background-clip: text;
+    -moz-background-clip: text;
+	color: transparent;
+
+	animation: text-scroll-By 10s linear infinite, gradient-2 15s ease infinite;
+
+}
+
+.spec {
+	color: var(--minor-color);
+	font-size: 100%;
+	font-family: inter;
+	text-align: center;
+	margin-top: 4vh;
+	padding-bottom: 4.5vh;
+	margin-left: 8vw;
+	margin-right: 8vw;
+	border-bottom: 1px solid #e6e6e6;
+}
+
+.spec-wrapper {
+	margin-top: 2vh;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	margin-left: 20vw;
+	margin-right: 20vw;
+}
+
+.spec-subject {
+	display : flex;
+  	align-items : center;
+  	justify-content: center;
+}
+
+.spec-logo {
+	height: 30px;
+}
+
+.spec-description {
+	padding-left: 6px;
+}
+
+
+#programs {
+	margin-top: 5vh;
+	border-radius: 30px;
+	/*border: 1px solid #e6e6e6;*/
+}
+
+.programs-title {
+	font-family: inter-semibold;
+	text-align: center;
+	font-size: 300%;
+	color: #222222;
+	padding: 2vw;
+	margin-left: 15vw;
+	margin-right: 15vw;
+	/*border-bottom: 1px solid #e6e6e6;*/
+}
+
+.panels {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin-left: 5vw;
+	margin-right: 5vw;
+}
+
+.panel {
+	display: grid;
+	grid-template-rows: 1fr 2fr;
+	border: 1px solid #e6e6e6;
+	margin: 30px;
+	border-radius: 20px;
+	height: 80vh;
+	box-shadow: 0px 5px 25px 8px rgba(0, 0, 0, 0.2);
+	transition-duration: .3s;
+}
+
+.panel:hover {
+	transform: perspective(1500px) rotateY(var(--y-angle)) rotateX(var(--x-angle));
+}
+
+.panel-info {
+	padding: 15px;
+	border-top: 1px solid #e6e6e6;
+	position: relative;
+}
+
+.panel-title {
+	font-family: inter-semibold;
+	font-size: 120%;
+}
+
+.panel-tags {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.panel-tag {
+	padding: 5px;
+	margin: 5px;
+	margin-left: 0;
+	font-family: monospace;
+	background-color: lime;
+	border-radius: 5px;
+}
+
+.green { background-color: #60db85; }
+.blue { background-color: #6580c9; }
+.purple { background-color: #957cd9; }
+.orange { background-color: #f0c769; }
+.red { background-color: #f07769; }
+
+.panel-register {
+	position: absolute;
+	bottom: 15px;
+	font-family: inter;
+	background-color: var(--nav-reg-color);
+	color: white;
+	padding: 10px 20px 10px 20px;
+	border-radius: 10px;
+	margin: 0;
+	transition-duration: .3s;
+	margin-top: 3vh;
+	text-align: center;
+	width: 70px;
+	font-size: 100%;
+	cursor: pointer;
+	stick: bottom;
+}
+
+.panel-description {
+	margin-top: 5px;
+}
+
+.panel-image {
+	max-width: 100%;
+	height: 100%;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+
+
