--- a/styles/index.css
+++ b/styles/index.css
@@ -319,3 +319,11 @@
 }
 
 
+footer {
+	height: 15vh;
+	background-color: var(--nav-reg-color);
+	padding: 5vh;
+	text-align: center;
+	color: white;
+}
+
