--- a/styles/nav.css
+++ b/styles/nav.css
@@ -62,6 +62,7 @@ a {
 	text-decoration: none;
 	margin: 10px;
 	padding: 1px;
+	cursor: pointer;
 }
 
 .nav-register {
@@ -105,4 +106,22 @@ a {
 .hover-underline-animation:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+/* For Chrome, Safari, and Opera */ 
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the thumb */
+  border-radius: 6px; /* Rounded corners of the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color of the thumb on hover */
 }
