--- a/styles/index.css
+++ b/styles/index.css
@@ -239,17 +239,18 @@
 .panels {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	margin-left: 5vw;
-	margin-right: 5vw;
+	margin: auto;
+	padding-left: 1vw;
 }
 
 .panel {
 	display: grid;
-	grid-template-rows: 1fr 2fr;
+	grid-template-rows: 1fr 4fr;
 	border: 1px solid #e6e6e6;
 	margin: 30px;
 	border-radius: 20px;
 	height: 80vh;
+	width: 25vw;
 	box-shadow: 0px 5px 25px 8px rgba(0, 0, 0, 0.2);
 	transition-duration: .3s;
 }
@@ -260,7 +261,8 @@
 
 .panel-info {
 	padding: 15px;
-	border-top: 1px solid #e6e6e6;
+	padding-top: 10px;
+	/*border-top: 1px solid #e6e6e6;*/
 	position: relative;
 }
 
@@ -313,7 +315,6 @@
 
 .panel-image {
 	max-width: 100%;
-	height: 100%;
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
 }
